--- a/Alarm Clock in JavaScript/index.html
+++ b/Alarm Clock in JavaScript/index.html
@@ -2,15 +2,15 @@
 <!-- Coding By CodingNepal - youtube.com/codingnepal -->
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Alarm Clock in JavaScript | CodingNepal</title>
-    <link rel="stylesheet" href="style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
     <div class="wrapper">
-      <img src="./files/clock.svg" alt="clock">
-      <h1>00:00:00 </h1>
+      <img src="./files/clock.svg" alt="clock" />
+      <h1>00:00:00</h1>
       <div class="content">
         <div class="column">
           <select>
@@ -22,12 +22,14 @@
             <option value="Minute" selected disabled hidden>Minute</option>
           </select>
         </div>
-        
       </div>
       <button>Set Alarm</button>
     </div>
+    <div class="show">
+      <div class="alarms-txt">Alarms</div>
+      <div class="alarm-list"></div>
+    </div>
 
     <script src="script.js"></script>
-
   </body>
 </html>
